if (${opencoarrays_aware_compiler})
  add_subdirectory(simple)
  add_subdirectory(send-get)
  add_subdirectory(init_register)
  add_subdirectory(collectives)
  add_subdirectory(sync)
  add_subdirectory(events)
  if (gfortran_compiler)
    if(NOT CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 7)
      add_subdirectory(fail_images)
      if(NOT CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 8)
        add_subdirectory(teams)
      endif()
    endif()
  endif()
else()
  add_subdirectory(extensions)
endif()
if( CAF_ENABLE_ISO_Fortran_BINDING OR ( CAF_RUN_DEVELOPER_TESTS OR $ENV{OPENCOARRAYS_DEVELOPER} ) )
  add_subdirectory(iso-fortran-binding)
endif()
